<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundGray"
    android:orientation="vertical"
    android:padding="20dp"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/app_bar_main">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:text="@string/account"
        android:textColor="@android:color/black"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:drawableStart="@drawable/ic_menu_gallery"
        android:drawableLeft="@drawable/ic_menu_gallery"
        android:drawablePadding="13dp"
        android:padding="15sp"
        android:text="@string/this_image_is_just_a_sample"
        android:textColor="@android:color/black" />

    <Switch
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:background="@android:color/white"
        android:padding="15sp"
        android:text="@string/private_account" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:text="@string/push_notifications"
        android:textColor="@android:color/black"
        android:textStyle="bold" />

    <Switch
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:padding="15sp"
        android:text="@string/new_deals" />

    <Switch
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:padding="15sp"
        android:text="@string/facebook_friend_joins" />

    <Switch
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:background="@android:color/white"
        android:padding="15sp"
        android:text="@string/friend_likes_my_activity" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:text="@string/get_help"
        android:textColor="@android:color/black"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:drawableEnd="@drawable/ic_keyboard_arrow_right_black_24dp"
        android:drawableRight="@drawable/ic_keyboard_arrow_right_black_24dp"
        android:drawablePadding="12dp"
        android:padding="15sp"
        android:text="@string/contact_us"
        android:textColor="@android:color/black" />


</LinearLayout>